# lightining-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark-artifacts.yml  ci-contract-tests.yml  docs-pages.yml  exia-tests.yml  python-wheel-publish.yml
Exia/: README.md  __init__.py  backend.py  hub.py  lightning_backend.py  nn.py  optim.py  pyproject.toml  standalone_ml.py  tensor.py  training.py
Exia/examples/: hf_inference.py  standalone_classification.py  standalone_linear.py  train_mlp.py
Exia/tests/: test_backend_env.py  test_standalone_ml.py  test_standalone_nn_training.py
benchmarks/: CMakeLists.txt  bench_attention.cpp  bench_cnn_dnn.cpp  bench_lstm_rnn.cpp  bench_matmul.cpp  bench_matrix_ops.cpp  bench_transformer.cpp  bench_vector_add.cpp  bench_vlm.cpp  generate_cross_suite_summary.py  generate_model_profile_env.sh  large_gemm_auto_sweep.py  sweep_matrix_ops.sh
benchmarks/python/: coreml_roundtrip_bench.py  coreml_runner_adapter_bench.py  cost_model_v2_calibration.py  engine_split_bench.py  fusion_pilot_bench.py  graph_eager_ab_bench.py  interop_perf_gate_v2.py  mlx_runner_adapter_bench.py  model_runner_alpha_bench.py  model_runner_variance_gate.py  phase_b_baseline_artifact.py  phase_b_exit_audit.py  phase_c_exit_audit.py  phase_d_exit_audit.py  phase_e_exit_audit.py  phase_f_rc_audit.py  quick_bench.py  quick_bench_ci_summary.py  quick_bench_variance_gate.py  tf_interop_bench.py  tf_runner_adapter_bench.py  torch_runner_adapter_bench.py
benchmarks/reports/2026-03-29/: cross_suite_summary.json  cross_suite_summary.md  large_gemm_auto_sweep.csv  large_gemm_auto_sweep.json  lightning_core_sweep_summary.json  torch_mps_vs_lightning_core.csv  torch_mps_vs_lightning_core.json
benchmarks/reports/2026-03-29/matmul_tune_profiles/: aggressive_mps_no_bucket_1024x1024x1024.csv  balanced_default_1024x1024x1024.csv  kernel_favor_no_bucket_1536x1536x1536.csv  kernel_favor_no_bucket_3072x3072x3072.csv  runtime_default_promoted_1024x1024x1024.csv  runtime_default_promoted_1536x1536x1536.csv  runtime_default_promoted_2048x2048x2048.csv  runtime_default_promoted_4096x1024x4096.csv
benchmarks/reports/ci/: phase_b_baseline_v0.2.2_rc0_2026-04-09.json
docs/: advanced.md  api_index.md  capability_matrix.md  contributor.md  engine_federation_contract.json  import_export_compatibility_matrix.json  import_export_matrix.md  index.md  operator_onboarding_kit.md  phase_b_contracts.md  phase_b_graph_contract.json  phase_c_engine_contract.json  phase_d_runner_contract.json  phase_e_contracts.md  phase_f_contracts.md  phase_f_framework_contract.json  quickstart.md  release_notes.md  roadmap_updates.json  runtime_capabilities.json  tensor_contract_matrix.json  test_matrix.md  test_matrix_contract.json  tested_environments.json
docs/reference/: cpp_api_generated.md  python_api_generated.md
examples/: CMakeLists.txt  lightining_core_c_api.c  lightning_core_c_api.c
include/cudajun/: apple_ml.hpp  attention.hpp  model_customization.hpp  namespace_alias.hpp  ops.hpp  runtime.hpp  tensor.hpp
include/lightining_core/: attention.hpp  graph.hpp  lightining_core.h  lightining_core.hpp  model_customization.hpp  namespace_alias.hpp  ops.hpp  runtime.hpp  tensor.hpp
include/lightning_core/: apple_ml.hpp  attention.hpp  graph.hpp  lightning_core.h  lightning_core.hpp  model_customization.hpp  namespace_alias.hpp  ops.hpp  runtime.hpp  tensor.hpp
python/: CMakeLists.txt  lc_run.py  lightning_core_integrated_api.py
python/bindings/: bind_attention.cpp  bind_common.hpp  bind_graph.cpp  bind_integrated.cpp  bind_ops.cpp  bind_runtime.cpp  bind_tensor.cpp  pybind_module.cpp
python/lightning_core_api/: __init__.py  bridges.py  checkpoint.py
scripts/: check_docs_links.py  check_phase_b_contract_sync.py  check_phase_c_contract_sync.py  check_phase_d_contract_sync.py  check_phase_e_contract_sync.py  check_phase_f_contract_sync.py  generate_api_reference_docs.py  generate_capability_docs.py  generate_import_export_matrix_docs.py  generate_phase_b_contract_docs.py  generate_phase_e_contract_docs.py  generate_phase_f_contract_docs.py  generate_roadmap_history.py  generate_test_matrix_docs.py  sync_exia_and_push.sh  sync_exia_to_standalone.sh  sync_release_metadata.py  sync_remote_after_repo_rename.sh
src/: apple_ml.mm  apple_ml_stub.cpp  attention.cpp  attention_cpu.cpp  attention_metal.mm  lightining_core_c_api.cpp  lightning_core_c_api.cpp  runtime.cpp  tensor.cpp
src/ops/: conv2d_metal.mm  matmul_cpu.cpp  matmul_metal.mm  matrix_elemwise.cpp  matrix_elemwise_metal.mm  vector_add.cpp  (+5 more)
tests/: CMakeLists.txt  test_attention.cpp  test_backend_parity.cpp  test_c_api_abi_freeze.cpp  test_graph_ir.cpp  test_matmul.cpp  test_matrix_ops.cpp  test_model_customization.cpp  test_python_autograd_bootstrap_smoke.py  test_python_autograd_v1_smoke.py  test_python_checkpoint_integrity_v12_smoke.py  test_python_checkpoint_io_smoke.py  test_python_coreml_engine_adapter_alpha_smoke.py  test_python_coreml_roundtrip_beta_smoke.py  test_python_graph_fallback_numerical_stress.py  test_python_graph_validation_report_smoke.py  test_python_integrated_timeline_smoke.py  test_python_interop_boundary_smoke.py  test_python_mlx_bridge_alpha_smoke.py  test_python_model_runner_alpha_smoke.py  test_python_model_runner_beta_artifact_smoke.py  test_python_operator_onboarding_smoke.py  test_python_phase_b_exit_audit_smoke.py  test_python_phase_c_exit_audit_smoke.py  test_python_phase_d_exit_audit_smoke.py  test_python_phase_e_exit_audit_smoke.py  test_python_phase_f_rc_audit_smoke.py  test_python_runner_checkpoint_v2_smoke.py  test_python_runner_cli_repro_pack_smoke.py  test_python_runner_contract_freeze_smoke.py  test_python_tensor_contract_smoke.py  test_python_tf_bridge_smoke.py  test_python_tf_engine_adapter_beta_smoke.py  test_python_tf_interop_artifact_smoke.py  test_python_torch_engine_adapter_ga_smoke.py  test_python_training_surface_v1_smoke.py  test_python_tune_cache_format_smoke.py  test_runtime.cpp  test_tensor.cpp  test_tensor_contract_freeze.cpp  (+1 more)
(+35 files in other folders)
