[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "lightning-core"
version = "0.2.8"
description = "Lightning Core: macOS-first CUDA-style runtime with Metal backend"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "JunHyeon Beak (Kwangwoon University)" }
]
maintainers = [
  { name = "JunHyeon Beak (Kwangwoon University)" }
]
license = { text = "Kwangwoon University License 1.0 (KWU-1.0)" }
keywords = [
  "metal",
  "macos",
  "gpu",
  "runtime",
  "cuda-style",
  "pybind11",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/wnsgus00114-droid/lightning-core"
Repository = "https://github.com/wnsgus00114-droid/lightning-core"
Issues = "https://github.com/wnsgus00114-droid/lightning-core/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
  "-DCJ_BUILD_TESTS=OFF",
  "-DCJ_BUILD_BENCHMARKS=OFF",
  "-DCJ_BUILD_EXAMPLES=OFF",
  "-DCJ_BUILD_PYTHON=ON",
]
wheel.packages = []
